--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -10,8 +10,11 @@
       ul.nav.navbar-nav
         li.nav-item(class=(title === 'Home') ? 'active' : undefined)
           a.nav-link(href='/') Home
-        li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
-          a.nav-link(href='/api') API Examples
+        li.nav-item(class=(title === 'Projects') ? 'active' : undefined)
+          a.nav-link(href='/projects') Projects
+
+        //- li.nav-item(class=(title === 'API Examples') ? 'active' : undefined)
+        //-   a.nav-link(href='/api') API Examples
         li.nav-item(class=(title === 'Contact') ? 'active' : undefined)
           a.nav-link(href='/contact') Contact
         li.nav-item(class=(title === 'Status') ? 'active' : undefined)
