Update projects index page

--- a/views/projects/index.pug
+++ b/views/projects/index.pug
@@ -1,7 +1,17 @@
 extends ../layout
 
 block content
-  h1  Hello
-    small   
-      a.btn.btn-default(href="/projects/new")  
+  .pb-2.mt-2.mb-4.border-bottom
+    h3 Projects &nbsp;
+      a.btn.btn-primary.btn-sm.float-right(href="/projects/new")
         | New Project
+  div
+  //- Project Listing
+  each project in projects
+    li= project.title
+
+  //- No Projects
+  case projects.length
+    when 0: p
+      | There is No Projects&nbsp;
+      a(href='/projects/new') Create a new one?
