--- a/views/projects/new.pug
+++ b/views/projects/new.pug
@@ -3,13 +3,20 @@ extends ../layout
 block content
   .pb-2.mt-2.mb-4.border-bottom
     h3 New Project
-
   form(method='POST')
     input(type='hidden', name='_csrf', value=_csrf)
     .form-group.row
       label(class='col-md-2 col-form-label font-weight-bold', for='name') Name
       .col-md-8
-        input.form-control(type='text', name='name' id='name')
+        input.form-control(type='text', name='name', id='name')
+    .form-group.row
+      label(class='col-md-2 col-form-label font-weight-bold', for='type') Type
+      .col-md-8(style='display: flex; aligne-items: center;')
+        each t in types
+          .form-check.form-check-inline
+            input.form-check-input(type='radio', name='inlineRadioOptions', id=t, value=t)
+            | &nbsp;
+            label.form-check-label(for=t)= t
     .form-group
       .offset-md-2.col-md-8.p-1
         button.btn.btn-primary(type='submit')
