Update button to link

--- a/views/projects/index.pug
+++ b/views/projects/index.pug
@@ -3,7 +3,7 @@ extends ../layout
 block content
   .pb-2.mt-2.mb-4.border-bottom
     h3 Projects &nbsp;
-      a.btn.btn-primary.btn-sm.float-right(href="/projects/new")
+      a.btn.btn-link.btn-sm.float-right(href="/projects/new")
         | New Project
   div
   //- Project Listing
